# hlynov-test-assignment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  task_description.md
src/: app.py  csv_writer.py  logger.py  validation.py  xml_file_parser.py
test/: test_main.py
test/test_files/: critical_field_wrong.xml  non_critical_field_wrong.xml  not_valid_xml_file.xml  test_input.csv
